Fixed weird overflow with color selector

--- a/src/views/home/MyFooter.css
+++ b/src/views/home/MyFooter.css
@@ -47,7 +47,14 @@
     width: 60%;
     height: 2rem;
     margin: 1rem auto;
-    border: 0.5rem solid #555;
+    overflow: hidden;
+}
+
+.slider-tick {
+    width: calc(100% / 360);
+    height: 100%;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .tile-controls {
@@ -58,13 +65,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-}
-
-.slider-tick {
-    width: calc(100% / 360);
-    height: 100%;
-    display: inline-block;
-    cursor: pointer;
 }
 
 .chosen-color {
